clusters/sirius/infra/weave-gitops/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: weaveext
  namespace: flux-system
spec:
  type: ExternalName
  externalName: ak-outpost-weave.authentik.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-outer
  namespace: flux-system
spec:
  rules:
    - host: weave.moonblade.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weaveext
                port:
                  number: 9000
